--- a/css/styles.css
+++ b/css/styles.css
@@ -719,6 +719,7 @@ img {
    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
    border-radius: 4px;
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   padding: 24px;
 }
 
 .modal-button {
@@ -751,4 +752,92 @@ img {
 
 .modal-button-icons {
    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-title {
+   padding-top: 72px;
+   margin-bottom: 16px;
+   color: var(--navyblue, #2E2F42);
+   text-align: center;
+   font-family: Roboto;
+   font-size: 16px;
+   font-style: normal;
+   font-weight: 500;
+   line-height: 24px;
+   /* 150% */
+   letter-spacing: 0.32px;
+}
+
+.modal-input {
+   width: 360px;
+   height: 58px;
+   border-radius: 4px;
+   border: 1px solid var(--iris, #4D5AE5);
+   padding-left: 38px;
+   padding-right: 16px;
+   outline: transparent;
+   transition: border-color 200ms ease;
+}
+
+.modal-field {
+   margin-bottom: 8px;
+}
+
+.modal-check-text {
+   color: var(--lightslate, #8E8F99);
+   font-size: 12px;
+   letter-spacing: 0.04em;
+   /* display: flex; */
+   /* align-items: center; */
+}
+
+.modal-check-text span {}
+
+.modal-check-link {
+   color: var(--iris, #4D5AE5);
+   font-size: 12px;
+   letter-spacing: 0.04em;
+   text-decoration-line: underline;
+}
+
+.modal-form-button {}
+
+.modal-label {
+   color: var(--lightslate, #8E8F99);
+   font-family: Roboto;
+   font-size: 12px;
+   font-style: normal;
+   font-weight: 400;
+   line-height: 14px;
+   /* 116.667% */
+   letter-spacing: 0.48px;
+   display: block;
+   margin-bottom: 4px;
+}
+
+.modal-input-wrap {
+   position: relative;
+}
+
+.modal-icons {
+   fill: transparent;
+   stroke: #2e2f42;
+   position: absolute;
+   left: 24px;
+   top: 50%;
+   transform: translateY(-50%);
+   transition: stroke 200ms ease;
+}
+
+.modal-comment {
+   width: 360px;
+   height: 120px;
+   flex-shrink: 0;
+   border-radius: 4px;
+   border: 1px solid var(--iris, #4D5AE5);
+   padding-left: 16px;
+   padding-top: 8px;
+   outline: transparent;
+   transition: border-color 200ms ease;
+   resize: none;
 }
