--- a/css/styles.css
+++ b/css/styles.css
@@ -796,7 +796,7 @@ img {
    width: 360px;
    height: 120px;
    padding-left: 16px;
-   padding-right: 8px;
+   padding-top: 8px;
    resize: none;
    border-radius: 4px;
    border: 1px solid var(--iris);
@@ -822,4 +822,25 @@ img {
    line-height: 16px;
    letter-spacing: 0.04em;
    text-decoration-line: underline;
+}
+
+.modal-form-button {
+   color: var(--white);
+   background-color: var(--iris);
+   font-size: 16px;
+   font-weight: 500;
+   line-height: 1.5;
+   letter-spacing: 0.04em;
+   cursor: pointer;
+   display: block;
+   margin: 0 auto;
+   padding: 16px 32px;
+   border-radius: 4px;
+   align-items: flex-start;
+   gap: 10px;
+   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+   margin-bottom: 24px;
+   min-width: 169px;
+   border: none;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
