--- a/css/styles.css
+++ b/css/styles.css
@@ -720,7 +720,7 @@ img {
    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
    border-radius: 4px;
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   padding-top: 24px;
+   padding-top: 72px;
    padding-right: 24px;
    padding-bottom: 24px;
    padding-left: 24px;
@@ -771,37 +771,65 @@ img {
 
 .modal-form {}
 
-.modal-field {}
+.modal-field {
+   margin-bottom: 8px;
+}
 
 .modal-label {
    color: var(--lightslate);
    font-size: 12px;
+   line-height: 1.17;
    letter-spacing: 0.04em;
    display: block;
    margin-bottom: 4px;
 }
 
+.modal-input-wrap {
+   position: relative;
+}
+
 .modal-input {
    width: 360px;
-   height: 58px;
+   height: 40px;
    padding-left: 38px;
    padding-right: 16px;
    border-radius: 4px;
-   border: 1px solid var(--iris);
+   border: 1px solid rgba(46, 47, 66, 0.4);
+   background-color: transparent;
    outline: transparent;
-   transition: border-color 200ms ease 0s;
+   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-icons {
+   position: absolute;
+   left: 16px;
+   top: 50%;
+   transform: translateY(-50%);
+   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-text-comment {
+   margin-bottom: 16px;
 }
 
 .modal-comment {
+   color: rgba(46, 47, 66, 0.4);
+   background-color: transparent;
    width: 360px;
    height: 120px;
-   padding-left: 16px;
-   padding-top: 8px;
+   font-size: 12px;
+   line-height: 1.17;
+   letter-spacing: 0.04em;
+   padding: 8px 16px;
    resize: none;
+   border: 1px solid rgba(46, 47, 66, 0.4);
    border-radius: 4px;
-   border: 1px solid var(--iris);
    outline: transparent;
-   transition: border-color 200ms ease 0s;
+   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-check-field {
+   margin-bottom: 24px;
 }
 
 .modal-check {}
@@ -810,12 +838,24 @@ img {
    color: var(--lightslate, #8E8F99);
    font-size: 12px;
    font-weight: 400;
-   line-height: 14px;
+   line-height: 1.17;
    /* 116.667% */
    letter-spacing: 0.04em;
 }
 
-.modal-chesk-link {
+.modal-checkbox {
+   width: 16px;
+   height: 16px;
+   border: 1px solid rgba(46, 47, 66, 0.4);
+   border-radius: 2px;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   display: inline-flex;
+   align-items: center;
+   justify-content: center;
+   fill: transparent;
+}
+
+.modal-check-link {
    color: var(--iris, #4D5AE5);
    font-size: 12px;
    font-weight: 400;
