--- a/css/styles.css
+++ b/css/styles.css
@@ -527,6 +527,7 @@ img {
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: #FFFFFF;
+   margin-right: 192px;
    margin-bottom: 16px;
 }
 
@@ -560,6 +561,63 @@ img {
 
 .footer-icons {
    fill: #f4f4fd;
+}
+
+.footer-bottom {
+   display: flex;
+   justify-content: space-between;
+}
+
+.footer-subscribe {
+   width: 75px;
+   height: 24px;
+   color: var(--white, #FFF);
+   font-size: 16px;
+   font-weight: 500;
+   line-height: 1.5 letter-spacing: 0.02em;
+   margin-bottom: 16px;
+   margin-top: 100px;
+
+}
+
+.footer-input {
+   width: 264px;
+   height: 40px;
+   flex-shrink: 0;
+   border-radius: 4px;
+   border: 1px solid var(--white, #FFF);
+   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+   background: var(--navyblue, #2E2F42);
+   margin-top: 140px;
+   margin-left: 8px;
+}
+
+.footer-input::placeholder {
+   color: var(--white, #FFF);
+   font-size: 12px;
+   font-weight: 400;
+   line-height: 2.0;
+   letter-spacing: 0.04em;
+}
+
+.footer-button {
+   color: var(--white, #FFF);
+   text-align: center;
+   font-size: 16px;
+   font-weight: 500;
+   line-height: 1.5;
+   letter-spacing: 0.04em;
+   display: inline-flex;
+   padding: 8px 24px;
+   justify-content: center;
+   align-items: center;
+   gap: 16px;
+   border-radius: 4px;
+   background: var(--iris, #4D5AE5);
+   width: 165px;
+   height: 40px;
+   margin-right: 159px;
+   margin-bottom: 132px;
 }
 
 
@@ -702,6 +760,7 @@ img {
    background-color: rgba(46, 47, 66, 0.4);
    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .backdrop .is-hidden {
    opacity: 0;
