--- a/css/styles.css
+++ b/css/styles.css
@@ -882,6 +882,20 @@ img {
    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-input:focus {
+   border-color: #4D5AE5;
+}
+
+.modal-input:focus .modal-icons {
+   fill: #4D5AE5;
+}
+
+.modal-input:checked .modal-checkbox {
+   background-color: #404bbf;
+   border: none;
+   fill: #F4F4FD;
+}
+
 .modal-icons {
    position: absolute;
    left: 16px;
@@ -910,6 +924,10 @@ img {
    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-comment:focus {
+   border-color: #4D5AE5;
+}
+
 .modal-check-field {
    margin-bottom: 24px;
 }
@@ -921,7 +939,6 @@ img {
    font-size: 12px;
    font-weight: 400;
    line-height: 1.17;
-   /* 116.667% */
    letter-spacing: 0.04em;
 }
 
@@ -949,6 +966,8 @@ img {
 .modal-form-button {
    color: var(--white);
    background-color: var(--iris);
+   height: 56px;
+   font-family: Roboto, sans-serif;
    font-size: 16px;
    font-weight: 500;
    line-height: 1.5;
