--- a/css/styles.css
+++ b/css/styles.css
@@ -884,10 +884,12 @@ img {
 
 .modal-input:focus {
    border-color: #4D5AE5;
+   fill: #4D5AE5;
 }
 
 .modal-input:focus .modal-icons {
    fill: #4D5AE5;
+   border-color: #4D5AE5;
 }
 
 .modal-input:checked .modal-checkbox {
