--- a/css/styles.css
+++ b/css/styles.css
@@ -890,8 +890,8 @@ img {
 }
 
 .modal-input:checked+.modal-check-text .modal-checkbox {
-   background-color: #404bbf;
-   border: none;
+   /* background-color: #404bbf;
+   border: none; */
    fill: #F4F4FD;
 }
 
@@ -979,7 +979,7 @@ img {
    align-items: flex-start;
    gap: 10px;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-   margin-bottom: 24px;
+   /* margin-bottom: 24px; */
    min-width: 169px;
    border: none;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
