--- a/css/styles.css
+++ b/css/styles.css
@@ -638,9 +638,14 @@ img {
    cursor: pointer;
 }
 
-.footer-button-icons {
-   margin-left: 16px;
+.footer-button:hover {
+   background-color: var(--ocean);
 }
+
+.footer-button:focus {
+   background-color: var(--ocean);
+}
+
 
 
 /* ---------------------------Main Portfolio--------------------------- */
@@ -890,8 +895,8 @@ img {
 }
 
 .modal-input:checked+.modal-check-text .modal-checkbox {
-   /* background-color: #404bbf;
-   border: none; */
+   background-color: #404bbf;
+   border: none;
    fill: #F4F4FD;
 }
 
@@ -983,4 +988,12 @@ img {
    min-width: 169px;
    border: none;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-button:hover {
+   background-color: var(--ocean);
+}
+
+.modal-form-button:focus {
+   background-color: var(--ocean);
 }
