--- a/css/styles.css
+++ b/css/styles.css
@@ -994,10 +994,10 @@ img {
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form-button:hover {
+/* .modal-form-button:hover {
    background-color: var(--ocean);
 }
 
 .modal-form-button:focus {
    background-color: var(--ocean);
-}
+} */
